--- a/root/media/.README.md
+++ b/root/media/.README.md
@@ -1,13 +1,2 @@
 # media
-For any and all media (pictures, videos, audio)
-
-### by_date
-This directory stores ALL corresponding media by date.
-
-```
-YYYY/
-  MM_month/
-```
-
-### by_box
-This directory only creates and holds aliases/links to corresponding media from the by_date directories into categories like locations, events, boxes, etc.
+Should be an alias/link to zmedia.
